; ModuleID = '/home/carl/AnghaBench/vlc/src/playlist/extr_randomizer.c_randomizer_Select.c'
source_filename = "/home/carl/AnghaBench/vlc/src/playlist/extr_randomizer.c_randomizer_Select.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.randomizer = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @randomizer_Select(%struct.randomizer* %0, i32* %1) #0 {
  %3 = alloca %struct.randomizer*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store %struct.randomizer* %0, %struct.randomizer** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load %struct.randomizer*, %struct.randomizer** %3, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = call i32 @randomizer_IndexOf(%struct.randomizer* %6, i32* %7)
  store i32 %8, i32* %5, align 4
  %9 = load i32, i32* %5, align 4
  %10 = icmp ne i32 %9, -1
  %11 = zext i1 %10 to i32
  %12 = call i32 @assert(i32 %11)
  %13 = load %struct.randomizer*, %struct.randomizer** %3, align 8
  %14 = load i32, i32* %5, align 4
  %15 = sext i32 %14 to i64
  %16 = call i32 @randomizer_SelectIndex(%struct.randomizer* %13, i64 %15)
  ret void
}

declare dso_local i32 @randomizer_IndexOf(%struct.randomizer*, i32*) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @randomizer_SelectIndex(%struct.randomizer*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
